# ZipLLM

./: .gitignore  Cargo.toml  README.md  analyze_dedup_stats.py  config.json  requirements.txt  setup_test_models.sh  test_models.txt  threads_1.txt  threads_16.txt  threads_2.txt  threads_32.txt  threads_4.txt  threads_48.txt  threads_8.txt
analysis/: compression_throughput_analysis.py  decompression_throughput_analysis.csv  restore_throughput_analysis.py  throughput_analysis.py  throughput_analyzer.py
examples/: benchmark_bitx.rs  bitx.rs  restore_example.rs
experiment/: config.json  plots.ipynb  run_exp.py  zipnn_exp.py
experiment/fastcdc_exp/: Cargo.toml
experiment/fastcdc_exp/src/: main.rs
figs/: HF_size_over_time.py
py_lib/: download.py  generate_base_ft.py
src/: compression.rs  config.rs  deduplication.rs  download.rs  lib.rs  main.rs  pipeline.rs  restore.rs  storage.rs  tensor_loader.rs  traits.rs  types.rs
src/bitx/: Cargo.toml  bitx.rs  bitx_bytes.rs  mod.rs
