[package]
name = "zipllm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zipllm"
path = "src/main.rs"

[[bin]]
name = "restore"
path = "src/bin/restore.rs"

[[example]]
name = "bitx"
path = "examples/bitx.rs"

[dependencies]
safetensors = "0.6.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
bytemuck = "1.14"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = "0.9.1"
once_cell = "1.21.3"
rayon = "1.10.0"
anyhow = "1.0.98"
dashmap = "6.1.0"
serde_with = "3.14.0"
zstd = { version = "0.13", features = ["zstdmt"] }
log = "0.4"
env_logger = "0.11"
memmap2 = "0.9"
zstd-safe = "6.0"
clap = { version = "4.4", features = ["derive"] }


[dev-dependencies]
tempfile = "3.20"
