[package]
name = "bitx"
version = "0.1.0"
edition = "2021"
authors = ["ZipLLM Team"]
description = "XOR and ZSTD compression tools"

[[bin]]
name = "bitx"
path = "bitx.rs"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
rayon = "1.10"
zstd = { version = "0.12", features = ["zstdmt"] }
memmap2 = "0.9"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"